# productivity-project

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
productivity-app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
productivity-app/apps/account/: api.py  serializers.py  urls.py
productivity-app/apps/chat/: api.py  consumers.py  models.py  routing.py  serializers.py  urls.py
productivity-app/apps/chat/migrations/: 0001_initial.py  0002_alter_message_options.py
productivity-app/apps/core/: llm.py  llm_tools.py  services.py
productivity-app/apps/core/langchain/: graph.py  llm.py  state.py  test.ipynb  vectorstore.py
productivity-app/apps/core/langchain/nodes/: nodes.py
productivity-app/apps/event/: models.py
productivity-app/apps/event/migrations/: 0001_initial.py
productivity-app/apps/social/: admin.py  api.py  apps.py  models.py  permissions.py  prompts.py  serializers.py  signals.py  tasks.py  urls.py
productivity-app/apps/social/management/commands/: create_bots.py
productivity-app/apps/social/migrations/: 0001_initial.py  0002_alter_comment_text.py  0002_alter_post_text.py  0002_post_comment.py  0002_remove_post_comments_comment_post.py  0003_postlike.py  0003_topic_socialprofile_dislikes_socialprofile_interests.py  0004_post_original_post_post_unique_repost_per_user.py
scripts/: run.sh  wait-for-it.sh
